Remove unnecessary Kconfig features
I2C and PWM are unused on this board
Uniform _defconfig files & improve comments
Add note to build.yaml w.r.t building settings reset firmware

--- a/build.yaml
+++ b/build.yaml
@@ -8,3 +8,10 @@ include:
     # shield: nice_view
   - board: blecorne_right
     # shield: nice_view
+
+  # Uncomment the following to build a "settings reset" firmware
+  # to clear persistent settings (bluetooth connections, etc).
+  # - board: blecorne_left
+  #   shield: settings_reset
+  # - board: blecorne_right
+  #   shield: settings_reset
