--- a/boards/boardsource/blecorne/blecorne_right_defconfig
+++ b/boards/boardsource/blecorne/blecorne_right_defconfig
@@ -3,20 +3,14 @@
 # SPDX-License-Identifier: MIT
 #
 
-CONFIG_ZMK_SLEEP=y
-
 # Enable MPU
 CONFIG_ARM_MPU=y
 
-# enable pinctrl
+# Enable pinctrl
 CONFIG_PINCTRL=y
 
-# enable GPIO
+# Enable GPIO
 CONFIG_GPIO=y
-
-# Enable I2C
-CONFIG_I2C=y
-CONFIG_I2C_NRFX=y
 
 # Enable SPI
 CONFIG_SPI_NRFX=y
@@ -35,18 +29,8 @@ CONFIG_FLASH_MAP=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_XTAL=y
 CONFIG_CLOCK_CONTROL_NRF_K32SRC_30PPM=y
 
+# Do not enable USB on right half
 CONFIG_ZMK_USB=n
-CONFIG_ZMK_BLE=y
 
-# Turn on logging, and set ZMK logging to debug output
-#CONFIG_LOG=y
-#CONFIG_ZMK_USB_LOGGING=y
-#CONFIG_ZMK_LOG_LEVEL_DBG=y
-#CONFIG_LOG_BUFFER_SIZE=65536
-#CONFIG_LOG_STRDUP_BUF_COUNT=160
-#CONFIG_I2C_LOG_LEVEL_DBG=y
-#CONFIG_SPI_LOG_LEVEL_DBG=y
-#CONFIG_DISPLAY_LOG_LEVEL_DBG=y
-#CONFIG_LVGL_LOG_LEVEL_DBG=y
-#CONFIG_LVGL_USE_DEBUG=y
-#CONFIG_SENSOR_LOG_LEVEL_DBG=y
+CONFIG_ZMK_BLE=y
+CONFIG_ZMK_SLEEP=y
