--- a/boards/boardsource/blecorne/blecorne.dtsi
+++ b/boards/boardsource/blecorne/blecorne.dtsi
@@ -26,6 +26,7 @@
         zephyr,code-partition = &code_partition;
         zephyr,sram = &sram0;
         zephyr,flash = &flash0;
+        zmk,battery = &vbatt;
         zmk,kscan = &kscan0;
         zmk,physical-layout = &foostan_corne_6col_layout;
     };
@@ -59,6 +60,13 @@
         blue_led: led_0 {
             gpios = <&gpio1 9 GPIO_ACTIVE_HIGH>;
         };
+    };
+
+    vbatt: vbatt {
+        compatible = "zmk,battery-voltage-divider";
+        io-channels = <&adc 2>;
+        output-ohms =<2000000>;
+        full-ohms = <(2000000 + 806000)>;
     };
 };
 
